--- a/snippets/login-form-1/index.html
+++ b/snippets/login-form-1/index.html
@@ -22,5 +22,8 @@
 			<button type="submit" class="btn">Login</button>
 		</form>
 	</div>
+
+    <a style="text-decoration: none; color: darkmagenta; position: fixed; bottom: 0; left: 0; margin: 0 0 1rem 1rem; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" href="http://PinkOrca.net" target="_blank">By Pink Orca</a>
+
 </body>
 </html>
